[package]
name = "freezer-pallet"
version = "0.1.0"
authors = ["rupansh <rupanshsekar@hotmail.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', features = ['derive'], default-features = false }
bech32 = { version = "0.8.1", default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', version = '3.1.0', tag = 'monthly-2021-05', default-features = false, optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate', version = '3.0.0', tag = 'monthly-2021-05', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', version = '3.0.0', tag = 'monthly-2021-05', default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", version = '3.0.0', tag = 'monthly-2021-05', default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", version = '3.0.0', tag = 'monthly-2021-05', default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/substrate", version = '3.0.0', tag = 'monthly-2021-05', default-features = false }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { git = 'https://github.com/paritytech/substrate', version = '3.0.0', tag = 'monthly-2021-05', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', version = '3.0.0', tag = 'monthly-2021-05', default-features = false }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	'sp-runtime/std',
	'bech32/std',
	'pallet-contracts/std'
]
